Fixed data sample overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -105,6 +105,10 @@
   margin-top: 1em;
 }
 
+.tableschema-ui-editor-field .details .data .form-group {
+  overflow: hidden;
+}
+
 
 /* EditorPreview */
 
